# hh-agent-tails

./: .env.example  .gitignore  README.md  README_HUGGINGFACE.md  app.py  pyproject.toml  requirements.in  requirements.txt  setup.py  temp_test_doc.json
.github/workflows/: deploy.yml
hh_agent_tails/: app.py  collection_manager.py  vector_store.py
runtime_chroma/a0ecdef5-6936-4c9e-ad35-d6c394f8605b/: index_metadata.pickle
server/: logger_config.py
tests/: conftest.py  test_api.py  test_gradio.py
~/: .zshrc
