[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hh-agent-tails"
version = "0.1.0"
description = "Hedgehog Agent Tails"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = "-v --cov=hh_agent_tails --cov-report=xml --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["hh_agent_tails"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]
